# automation-workflows

./: README.md
js-vercel-processor/: package-lock.json
js-vercel-processor/api/: index.mjs
js-vercel-ui-processor/: README.md  package.json
rust-ui-processor/: Cargo.toml  README.md
rust-ui-processor/src/: gallery.rs  generate_readme_preview.rs  main.rs  processor.rs  utils.rs
rust-ui-processor/workflows/: ui-processor.yml
scripts/: README.md  create-repo.sh  readme-creation-date.sh
